# agents-matrix

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
agent/: loop.py
agents/agentscan/: .env.example  Dockerfile  README.md  agent_config.py  docker-compose.yml  main.py  mcp_tools.py  pyproject.toml
agents/agentscan/config/: pricing.toml
agents/agentscan/scripts/: deploy.sh  register.sh
agents/cast/: .env.example  Dockerfile  agent_config.py
agents/cast/config/: pricing.toml
agents/cast/docker/: install.sh
agents/cast/scripts/: deploy.sh
agents/drawio/: .env.example  Dockerfile  agent_config.py  docker-compose.yml  main.py  mcp_entry.py  mcp_tools.py  pyproject.toml
agents/drawio/config/: pricing.toml
agents/drawio/docker/: install.sh
agents/solana/: .env.example  Dockerfile  agent_config.py  docker-compose.yml  main.py  mcp_tools.py  pyproject.toml
agents/solana/config/: clusters.toml  pricing.toml
agents/solana/docker/: install.sh
agents/sui/: .env.example  Dockerfile  agent_config.py  docker-compose.yml  main.py  mcp_tools.py  pyproject.toml
agents/sui/config/: envs.toml  pricing.toml
agents/sui/docker/: install.sh
agents/sui/scripts/: run.sh
config/: chains.toml  pricing.toml  settings.py
docs/: deployment.md
executor/: cast_executor.py
framework/: pyproject.toml
framework/src/agents_core/: app.py  discovery.py  payment.py  registration.py  settings.py
mcp_server/: __main__.py  cast_tools.py
register/: register_agent.py
scripts/: deploy.sh  dev.sh  docker-gen.sh  health.sh  new-agent.sh  register.sh  run.sh
server/: agent_card.py  app.py  payment.py
