[project]
name = "drawio-agent"
version = "0.1.0"
description = "Draw.io Diagram Agent — create, edit, and export diagrams via draw.io CLI"
requires-python = ">=3.12"
dependencies = [
    "agents-core",
    "cli-anything-drawio",
]

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
agents-core = { workspace = true }
cli-anything-drawio = { path = "../../../../CLI-Anything/drawio/agent-harness", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_config", "mcp_tools", "mcp_entry"]
