[project]
name = "solana-agent"
version = "0.1.0"
description = "Solana Agent — multi-cluster Solana blockchain queries via solana CLI"
requires-python = ">=3.12"
dependencies = [
    "agents-core",
]

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
agents-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_config", "mcp_tools", "mcp_entry"]
